# math575

biophys/folding-1d/: Cargo.toml
biophys/folding-1d/src/: main.rs
immunology/boolean-network/: .gitignore  Cargo.toml  Trunk.toml
immunology/boolean-network/public/: index.html
immunology/boolean-network/src/: main.rs
immunology/boolean-network/src/model/: cycle.rs  mod.rs
