[package]
name = "boolean-network"
version = "0.1.0"
authors = ["aemino <aeminodev@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
bevy_fly_camera = { path = "bevy_fly_camera" }
petgraph = "0.5.1"
rand = "0.8.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.5.0", default-features = false, features = ["bevy_winit", "render"] }
bevy_webgl2 = "0.5.2"
bevy_web_fullscreen = { path = "bevy_web_fullscreen" }

[patch.crates-io]
winit = { git = "https://github.com/rust-windowing/winit" }

[profile.release]
lto = true
opt-level = 's'
